# cr_mech_coli

./: .gitignore  Cargo.toml  README.md  docker.sh  paper.bib  paper.crossref  paper.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  CI2.yml  sphinx_doc.yml  test.yml
cr_mech_coli/: .gitignore  Cargo.toml  __init__.py  cr_mech_coli.pyi  cr_mech_coli_rs.pyi  crm_bench_imaging.py  crm_divide.py  crm_perf_plots.py  datatypes.py  fitting.py  imaging.py  plotting.py  pyproject.toml  requirements.txt  simulation.py
cr_mech_coli/cr_mech_coli/: __init__.py  imaging.py
cr_mech_coli/crm_amir/: __init__.py  crm_amir_rs.pyi  main.py
cr_mech_coli/crm_divide/: __init__.py  crm_divide_rs.pyi  main.py  optimize.py  predict.py
cr_mech_coli/crm_estimate_params/: main.py
cr_mech_coli/crm_fit/: __init__.py  crm_fit_rs.pyi  main.py  plotting.py  predict.py
cr_mech_coli/crm_gen/: README.md  __init__.py  background.py  bacteria.py  config.py  default_config.toml  filters.py  main.py  metrics.py  optimization.py  pipeline.py  scene.py  visualization.py
cr_mech_coli/crm_gen/configs/: default_fit_config.toml  default_gen_config.toml
cr_mech_coli/crm_gen_data/: main.py
cr_mech_coli/crm_imaging_sim/: __init__.py
cr_mech_coli/crm_multilayer/: __init__.py  data_generation.py  main.py  plotting.py  runner.py
cr_mech_coli/src/: lib.rs  main.rs  sampling.rs  simulation.rs
cr_mech_coli/tests/: test_basic.py
data/1981-IWF-Goettingen/: README.md
data/crm_amir/: obtain.py
data/crm_divide/0001/: settings.toml
data/crm_divide/test/: settings.toml
data/crm_fit/0001/: settings.toml
data/crm_fit/0004/: settings.toml
data/crm_fit/mie_all/: settings.toml
data/crm_fit/mie_partial/: settings.toml
data/crm_fit/morse_all/: settings.toml
data/crm_fit/morse_partial/: settings.toml
data/raw/2007-youtube/: README.md
data/raw/2012-youtube/: README.md
data/raw/2018-nature-Duvernoy-et-al/: README.md
data/raw/2018-youtube/: README.md
docs/: requirements.txt
docs/source/: cell-segmentation.md  cell-segmentation.rst  changelog.rst  conf.py  fitting-methods.rst  image-generation.md  image-generation.rst  index.rst  model.rst  performance.rst  references.bib  references.rst  segmentation.md  todo.rst
docs/source/documentation/: crm_gen.rst  fitting.rst  imaging.rst  index.rst  simulation.rst
docs/source/scripts/: crm_amir.rst  crm_divide.rst  crm_gen.rst  crm_multilayer.rst  crm_perf_plots.rst  index.rst
paper/: Makefile  README.md  coverletter.tex  introduction_old.tex  main.tex  references.bib
paper/figures/: crm_estimate_params  crm_fit-data-progression.xcf  tikz-preamble.tex
paper/figures/concept/: overview.tex  visualization.tex
paper/figures/crm_divide/: optimization-final-costs.npy  optimization_evals.csv  optimize_result.csv  plot_profiles.py  profile-000000.csv  profile-000001.csv  profile-000002.csv  profile-000003.csv  profile-000004.csv  profile-000006.csv  (+8 more)
paper_segmentation_tracking/: .gitignore  Makefile  main.tex
paper_segmentation_tracking/fake-figures/: main.py
plots/: cell_mesh.py  fitting_extract_positions.py  fitting_penalty_over_time.py  fitting_progression.py  fitting_to_data.py  index_simulation.py  mechanics_schematic.py  mie-potential.py  param_estim_single_step.py  param_estimation_single_step.py  position_extraction_algorithm.py
plots/param_estimation_single_step/: __init__.py  main.py  plotting.py  predict.py
scripts/: cp.ipynb  rcnn.ipynb  segment.ipynb  test.ipynb
src/: agent.rs  cell_container.rs  config.rs  crm_amir.rs  crm_divide.rs  crm_multilayer.rs  datatypes.rs  fitting.rs  imaging.rs  imaging_vtk.rs  lib.rs  sampling.rs  simulation.rs
src/crm_estimate_params/: mod.rs
src/crm_fit/: mod.rs  optimize.rs  predict.rs  settings.rs
tests/: multilayer1.py  test_basic.py  test_config.py  test_convert_positions.py  test_counter_color_conversion.py  test_create_potentials.py  test_crm_divide.py  test_crm_gen_config.py  test_crm_gen_filters.py  test_crm_gen_pipeline.py  test_fit.py  test_getting_started.py  test_image_generation_basic.py
vtkRender/src/: render.cxx
(+296 files in other folders)
