[package]
name = "cr_mech_coli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cr_mech_coli"
crate-type = ["cdylib", "rlib"]

[dependencies]
cellular_raza = { git="https://github.com/jonaspleyer/cellular_raza", features = ["pyo3"] }
nalgebra = { version = "0.33.0", features = ["serde", "serde-serialize"] }
num = { version = "0.4.3", features = ["rand", "serde"] }
numpy = { version = "0.22.0", features = ["half", "nalgebra"] }
pyo3 = { version = "0.22", features = ["serde", "py-clone"] }
rand = { version = "0.8.5", features = ["serde", "serde1"] }
rand_chacha = { version = "0.3.1", features = ["serde"] }
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["arbitrary_precision", "float_roundtrip", "preserve_order", "std"] }
