[package]
name = "cr_mech_coli"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cr_mech_coli"
crate-type = ["cdylib", "rlib"]

# Due to python docstrings
doctest = false

[dependencies]
cellular_raza = { version = "0.2", features = ["pyo3"] }
approx = "0.5.1"
approx-derive = "0.2.2"
itertools = "0.14.0"
nalgebra = { version = "0.33", features = ["serde", "serde-serialize"] }
num = { version = "0.4.3", features = ["rand", "serde"] }
numpy = { git="https://github.com/jonaspleyer/rust-numpy", features = ["half", "nalgebra"] }
pyo3 = { version = "0.22", features = ["serde", "py-clone"] }
rand = { version = "0.8.5", features = ["serde", "serde1"] }
rand_chacha = { version = "0.3.1", features = ["serde"] }
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.2"
serde_json = { version = "1.0.128", features = ["arbitrary_precision", "float_roundtrip", "preserve_order", "std"] }
toml = "0.8"
