[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "cr_mech_coli"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pyvista==0.44",
    "numpy==2.2",
    "opencv-python==4.11.0.*",
    "tqdm==4.67",
    "scikit-image==0.25",
]

[project.optional-dependencies]
scripts = [
    "torch",
    "torchvision",
]

[tool.maturin]
features = ["pyo3/extension-module"]
# python-source = "."
# module-name = "cr_mech_coli.cr_mech_coli"
